# Facultad

./: CMakeLists.txt
DInamicMemory/: dmem1.c  dmem2.c
DInamicMemory/Ejemplos memoria dinamica/: ejemplo_malloc.c  ejemplo_realloc_struct_archivo.c  stackVsHeap.c
Ejemplos codigo archivos /: lectura_archivo.c
Ejemplos punteros diapos/: ejemplo05_diapo.c  ejemplo06_diapo.c  ejemplo07_diapo.c  ejemplo11_diapo.c
Parciales/: Integrador clase.c
Strings/: EjemploLibreriaString.c  String1.c  String2.c  String3.c  String4.c  String5.c
Strings/Ejemplos strings/: copia_invierte_compara.c  fgets.c
StructYUnion/: StrUni2.c  StrcUni1.c  StrcUni3.c
StructYUnion/Ejemplos structyunions/: ejemplo_struct.c
